# ARMD_code

./: Dockerfile  LICENSE  MIGRATION.md  README.md  build.py  config.ini  docker-compose.yml  index.html  justfile  pyproject.toml  stuff.patch
mongo/: Dockerfile  mongo-startup.sh
scripts/: gen_cython_pyproject.py  make_migration_script.py  rename.py  save-image.sh
scripts/debug/: Dockerfile
scripts/migration_templates/: all_migrations.py.j2  migration_template.py.j2
src/: batch_predict.py  deployment.py  extra_attributes.py  flow.py  model_algorithm.py
src/migrations/: Migration_1663732251511_schema_for_new_k8s.py  all_migrations.py
src/training/: __init__.py  helpers.py  utils.py
tests/: __init__.py  test_ml.py
tests/datasets/AirPassengers/: meta.json  prediction.csv  train.csv
tests/datasets/Shanghai_Car_License_Plate_Auction_Price/: meta.json  prediction.csv  train.csv
tests/datasets/predict_unexpected_date/: meta.json  prediction.csv  train.csv
tests/datasets/predict_unseen_time_groups/: meta.json  prediction.csv  train.csv
tests/datasets/target_pivot_handle_list_of_tuple/: meta.json  prediction.csv  train.csv
tests/datasets/test_no_time_group_no_invalid_time_series/: meta.json  train.csv
tests/datasets/test_no_time_group_some_invalid_time_series/: prediction.csv  train.csv
tests/datasets/test_no_time_group_with_gap_some_invalid_time_series/: meta.json  train.csv
tests/datasets/test_one_time_group_no_invalid_time_series/: meta.json  train.csv
tests/datasets/test_one_time_group_some_invalid_time_series/: prediction.csv  train.csv
tests/datasets/test_one_time_group_with_gap_some_invalid_time_series/: meta.json  train.csv
tests/datasets/test_simple_weighted_groupby/: meta.json  prediction.csv  train.csv
tests/datasets/test_two_time_groups_no_invalid_time_series/: meta.json  prediction.csv  train.csv
tests/datasets/test_two_time_groups_some_invalid_time_series/: train.csv
tests/datasets/test_two_time_groups_some_invalid_time_series_with_endo_features/: meta.json  train.csv
tests/datasets/test_two_time_groups_with_gap_some_invalid_time_series/: meta.json  prediction.csv  train.csv
tests/datasets/trivial/: meta.json  prediction.csv  train.csv
